# TR-XRD-ID09

./: .gitignore  README.md  Use_drx.ipynb  installed-requirements.txt  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  test copy.py  test.py
Bibli_python/: CL_FD_Update.py  Calibration.py  __init__.py  pressure_law.py
TEST/: Ice-VII.jcpds  calib_LaB6_11062025_correct.poni  config_TEST.txt  mask_jf1M_flo.mask
TUTO/: calib_THT8_correct_samedi.poni  scan_jf1m_0000.mask
resources/bibdrx/Au/: Au_Takemura_corrected.jcpds
resources/bibdrx/Bi/: Bi-BetaSn.jcpds  Bi-I.jcpds  Bi-II.jcpds  Bi-IV.jcpds  Bi-V.jcpds
resources/bibdrx/Cr/: Cr.jcpds
resources/bibdrx/Cu/: Cu_fcc.jcpds
resources/bibdrx/Ga/: Ga-I.jcpds  Ga-II.jcpds  Ga-III.jcpds  Ga-III_v2.jcpds  Ga_liq.jcpds
resources/bibdrx/H2O/: Ice-II.jcpds  Ice-III.jcpds  Ice-Ih.jcpds  Ice-V.jcpds  Ice-VI.jcpds  Ice-VII.jcpds  Ice-XXI.jcpds  ice-Ic.jcpds
resources/bibdrx/KCl/: KCl_B1.jcpds  kcl-b2.jcpds
resources/bibdrx/Sn/: Sn_Beta_modif.jcpds  Sn_alpha.jcpds  Sn_bcc_Dew.jcpds  bctSn_revised2.jcpds
resources/bibdrx/Ta/: Ta_bcc.jcpds
resources/bibdrx/Vesta/: 11215848.cell  11215848.cif  12229187.cell  12229187.cif  12232449.cell  12232449.cif  14248453.cell  14248453.cif  152201714.cell  152201714.cif  1522118474.cell  1522118474.cif  169210608.cell  169210608.cif  16927915.cell  16927915.cif  20226425.cell  20226425.cif  20228176.cell  20228176.cif  20714435.cell  20714435.cif  22342692.cell  22342692.cif  533726600.cell  533726600.cif  582511.cell  582511.cif  6128842.cell  6128842.cif  8421419.cell  8421419.cif  9128335121.cell  9128335121.cif  ACO.cell  ACO.cif  (+69 more)
resources/config/: .last_config_path  config.txt  config_21012025.txt  config_Bi.txt  config_ESRF2024.txt  config_Ga.txt  config_H2O.txt  config_Sn.txt  config_home.txt  config_labo.txt  config_water01.txt
resources/text/: Command.txt  Help.txt
src/Bibli_python/: CL_FD_Update.py  Calibration.py  calibration_ui.py  gauge.py
src/cedapp/: __init__.py  main.py
(+30 files in other folders)
