[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cedapp"
version = "0.1.0"
description = "Application Python de traitement et visualisation de données XRD dynamique."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Florian Dembele" }
]
keywords = ["xrd", "diffraction", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "deap>=1.4.0",
  "dill>=0.3.7",
  "fabio>=2023.4.0",
  "lecroyscope>=1.0.0",
  "lmfit>=1.2.0",
  "matplotlib>=3.7.0",
  "numpy>=1.24.0",
  "pandas>=1.5.0",
  "pathos>=0.3.1",
  "peakutils>=1.3.4",
  "Pillow>=9.5.0",
  "pybaselines>=1.1.0",
  "pyFAI>=2023.9.0",
  "pynverse>=0.1.4.6",
  "PyQt5>=5.15.9",
  "pyqtgraph>=0.13.3",
  "scipy>=1.10.0",
  "silx>=1.1.2",
  "tqdm>=4.66.0",
]

[project.scripts]
cedapp = "cedapp.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cedapp*"]
